--- a/css/slide-menu.css
+++ b/css/slide-menu.css
@@ -29,53 +29,13 @@ This is the parent `<div>` that contains the menu and the content area.
 }
 
 #layout.active #menu_slide {
-    left: 150px;
+    right: 0px;
     width: 150px;
 }
 
 #layout.active .menu__link_slide {
-    left: 150px;
+    right: 150px;
 }
-
-
-/*
-The content `<div>` is where all your content goes.
-*/
-
-
-/* .content {
-    margin: 0 auto;
-    padding: 0 2em;
-    max-width: 800px;
-    margin-bottom: 50px;
-    line-height: 1.6em;
-} */
-
-
-/* .header {
-     margin: 0;
-     color: #333;
-     text-align: center;
-     padding: 2.5em 2em 0;
-     border-bottom: 1px solid #eee;
- }
-    .header h1 {
-        margin: 0.2em 0;
-        font-size: 3em;
-        font-weight: 300;
-    }
-     .header h2 {
-        font-weight: 300;
-        color: #ccc;
-        padding: 0;
-        margin-top: 0;
-    }
-
-.content-subhead {
-    margin: 50px 0 20px 0;
-    font-weight: 300;
-    color: #888;
-} */
 
 
 /*
@@ -89,7 +49,7 @@ appears on the left side of the page.
     width: 150px;
     position: fixed;
     top: 0;
-    left: 0;
+    right: -150px;
     bottom: 0;
     z-index: 1000;
     /* so the menu or its navicon stays above all content */
@@ -190,7 +150,7 @@ small screens.
     display: block;
     /* show this only on small screens */
     top: 0;
-    left: 0px;
+    right: 0px;
     /* "#menu_slide width" */
     background: #28A4E1;
     background: rgba(40, 164, 225, 0.7);
@@ -229,49 +189,4 @@ small screens.
 
 .menu__link_slide span:after {
     margin-top: 0.6em;
-}
-
-
-/* -- Responsive Styles (Media Queries) ------------------------------------- */
-
-
-/*
-Hides the menu at `48em`, but modify this based on your app's needs.
-*/
-
-@media (min-width: 1025px) {
-    .header,
-    .content {
-        padding-left: 2em;
-        padding-right: 2em;
-    }
-    #layout {
-        /*padding-left: 150px; */
-        /* left col width "#menu_slide" */
-        left: 0;
-    }
-    #menu_slide {
-        left: 150px;
-    }
-    .menu__link_slide {
-        position: fixed;
-        left: 150px;
-        display: none;
-    }
-    #layout.active .menu__link_slide {
-        left: 150px;
-    }
-}
-
-@media (max-width: 1024px) {
-    /* Only apply this when the window is small. Otherwise, the following
-    case results in extra padding on the left:
-        * Make the window small.
-        * Tap the menu to trigger the active state.
-        * Make the window large again.
-    */
-    #layout.active {
-        position: relative;
-        left: 150px;
-    }
 }
